deinterpolate variables
* experiment with reversing expressions to bind variables

* provid IntRange factory methods to provide clarity about open and closed ranges

* match with minlength

* Format RangeFlex with colours

* match OptSuffix expression with variable bindings

* split tests

* add MatchAssert

* match ElvisExpression

* match OptPrefix

* match Concat

* reverse verify bindings matching full string

* improve multiline format structure

* remove complex RangeFlex.Concat

* remove old Bindings attempt

* reflect max length in formatted range with underline

* constrain concatenated matches, choice of multiple matches of text expression

* introduce multiple matches

* add source variable bindings and merge applied ranges for variable values

* add scores and bindings debugging ui

* integrate bindings in template values

* move score to match

* use iterative filters

* cleanup ChoiceMatch & MatchAssert

* cleanup Match

* decouple parser from eel

* decouple match from eel

* reorganize parser packages

* cleanup Binding

* fix test